; ModuleID = '/home/carl/AnghaBench/linux/kernel/extr_umh.c_umh_clean_and_save_pid.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/extr_umh.c_umh_clean_and_save_pid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.subprocess_info = type { i32, i32, %struct.umh_info* }
%struct.umh_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.subprocess_info*)* @umh_clean_and_save_pid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @umh_clean_and_save_pid(%struct.subprocess_info* %0) #0 {
  %2 = alloca %struct.subprocess_info*, align 8
  %3 = alloca %struct.umh_info*, align 8
  store %struct.subprocess_info* %0, %struct.subprocess_info** %2, align 8
  %4 = load %struct.subprocess_info*, %struct.subprocess_info** %2, align 8
  %5 = getelementptr inbounds %struct.subprocess_info, %struct.subprocess_info* %4, i32 0, i32 2
  %6 = load %struct.umh_info*, %struct.umh_info** %5, align 8
  store %struct.umh_info* %6, %struct.umh_info** %3, align 8
  %7 = load %struct.subprocess_info*, %struct.subprocess_info** %2, align 8
  %8 = getelementptr inbounds %struct.subprocess_info, %struct.subprocess_info* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @argv_free(i32 %9)
  %11 = load %struct.subprocess_info*, %struct.subprocess_info** %2, align 8
  %12 = getelementptr inbounds %struct.subprocess_info, %struct.subprocess_info* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load %struct.umh_info*, %struct.umh_info** %3, align 8
  %15 = getelementptr inbounds %struct.umh_info, %struct.umh_info* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  ret void
}

declare dso_local i32 @argv_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
